--- a/style.css
+++ b/style.css
@@ -8,13 +8,16 @@
 
 body {
     height: 100vh;
-    background-color: #448aff;
+    /* background-color: #448aff; */
+    /* background-color: #A66CFF; */
+    background: linear-gradient(119deg, #98ecfc, #ea4297);
     font-family: sans-serif;
 }
 
 .wrapper{
     width: 410px;
-    background-color: white;
+    /* background-color: white; */
+    background-color: #8FE3CF;
     padding: 30px 30px;
     border-radius: 8px;
     position: absolute;
@@ -30,7 +33,8 @@ body {
     letter-spacing: 1px;
     font-family: sans-serif;
     font-size: 30px;
-    color: #0558b7;
+    /* color: #0558b7; */
+    color: #2A0944;
 }
 
 .enter-n{
@@ -44,15 +48,17 @@ body {
 
 .enter-n label{
     font-family: sans-serif;
-    font-size: 20px;
-    color: #0558b7;
+    font-size: 25px;
+    /* color: #0558b7; */
+    color: #005555;
 }
 
 .n{
     background-color: #f1f5fc;
     font-size: 2.7vmin;
     font-weight: 500;
-    color: #044db4;
+    /* color: #044db4; */
+    color: #005555;
     padding: 15px 10px;
     border-radius: 5px;
     border: 1px solid #cfd5d5;
@@ -62,7 +68,8 @@ body {
 }
 
 .btn{
-    background-color: #2e80b3;
+    /* background-color: #2e80b3; */
+    background-color: #2A0944;
     min-width: 42%;
     padding: 12px 0;
     color: #ffffff;
@@ -76,14 +83,15 @@ body {
 }
 
 .btn:focus{
-    color: black;
+    transform: scale(1.2);
 }
 
 #output-otp{
     background-color: #f1f5fc;
-    font-size: 2.7vmin;
+    font-size: 3vmin;
     font-weight: 500;
-    color: #044db4;
+    /* color: #044db4; */
+    color: #005555;
     width: 100%;
     padding: 15px 10px;
     border-radius: 5px;
